[PAGOPA-1727] fix: Update Dockerfile